<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <!-- Spring Boot Parent -->
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.5</version>
        <relativePath/>
    </parent>

    <!-- Project Info -->
    <groupId>com.sprint</groupId>
    <artifactId>project</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>project</name>
    <description>Spring Boot Hospital Management System</description>

    <!-- Java Version -->
    <properties>
        <java.version>21</java.version>
    </properties>

    <!-- Dependencies -->
    <dependencies>

         Spring Boot Web (REST APIs + Tomcat)
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        
<!--        &lt;!&ndash;dependency for security &ndash;&gt;-->
<!--        <dependency>-->
<!--		    <groupId>io.jsonwebtoken</groupId>-->
<!--		    <artifactId>jjwt-api</artifactId>-->
<!--		    <version>0.11.5</version>-->
<!--		</dependency>-->
<!--		-->
<!--		<dependency>-->
<!--		    <groupId>io.jsonwebtoken</groupId>-->
<!--		    <artifactId>jjwt-impl</artifactId>-->
<!--		    <version>0.11.5</version>-->
<!--		    <scope>runtime</scope>-->
<!--		</dependency>-->
<!--		-->
<!--		<dependency>-->
<!--		    <groupId>io.jsonwebtoken</groupId>-->
<!--		    <artifactId>jjwt-jackson</artifactId>-->
<!--		    <version>0.11.5</version>-->
<!--		    <scope>runtime</scope>-->
<!--		</dependency>-->

        <!-- Spring Boot JPA (Database ORM) -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>

        <!-- Validation (@NotNull, @NotBlank, etc.) -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>

        <!-- PostgreSQL Driver -->
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <scope>runtime</scope>
        </dependency>

        <!-- Testing -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- Lombok dependency-->
<!--        <dependency>-->
<!--    <groupId>org.projectlombok</groupId>-->
<!--    <artifactId>lombok</artifactId>-->
<!--    <version>1.18.32</version>-->
<!--    <scope>provided</scope>-->
<!--    </dependency>-->

        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>2.5.0</version>
        </dependency>


    </dependencies>

    <!-- Build Plugin -->
    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

</project>